Recycle NFA suffixes and cleanup #1100